[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "envdiff"
version = "0.1.0"
description = "Environment change detector - like git diff for your entire machine state"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Builder", email = "builder@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "psutil>=5.8.0",
    "rich>=13.0.0",
    "deepdiff>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black",
    "flake8",
]

[project.scripts]
envdiff = "envdiff.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["envdiff*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["envdiff/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"